--- a/views/findTransport.html
+++ b/views/findTransport.html
@@ -258,7 +258,7 @@
                                              </div>
                                           </div>
                                        </div>
-                                      <input type="submit" value="upload image" id="submitPostId" class="btn btn-primary" disabled>
+                                      <input type="submit" value="upload image" translate="save" id="submitPostId" class="btn btn-primary" disabled>
                                     </form>
                                   </div>
                               </div>
