--- a/views/login.html
+++ b/views/login.html
@@ -39,7 +39,7 @@
                           </button>
                         </div>
                         <div class="signup-box">
-                            <h4><span ><a href="" ng-click="toggle_register();getUserGender();" translate="signup">SignUp</a></span></u></h4>
+                            <h4><span><a href="" class="fa fa-registered" aria-hidden="false" ng-click="toggle_register();getUserGender();" translate="signup">SignUp</a></span></u></h4>
                         </div>
                         <!-- ALert Box For Wrong Usernme and password combination -->
                         <div class="alert-group" ng-show="signUpAlert">
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <div class="info">
-                           <a href="/" translate="backtosearchHomepage">Back to Searches</a>
+                           <i class="fa fa-home" aria-hidden="true"></i><a href="/" translate="backtosearchHomepage">Back to Searches</a>
                         </div>
                       </div>
                   </div>
