--- a/views/salethingsFromHome.html
+++ b/views/salethingsFromHome.html
@@ -30,8 +30,7 @@
     <link href="/assets/css/chat.css" rel="stylesheet"/>
    </head>
    <script src="https://js.stripe.com/v3/"></script>
-  <body ng-controller="thingsToSaleController">
-    <header>
+    <header ng-controller="thingsToSaleController">
         <div class="container">
            <div>
                <div class="head">
@@ -50,6 +49,10 @@
             </div>
         </div>
     </header>
+  <body ng-controller="thingsToSaleController">
+             <div>
+               <span translate="salePageIntro" style="color:white;font-size: 24px;margin-left: 50px;background-color: rgb(206, 66, 244);">Do you need something to buy? Then you are in the rightway.This page is all about buying and saling things.</span>
+             </div>
               <div class="row" id="wrapper">
                 <div class="col-lg-3" style="background-color:rgb(234, 190, 171)">
                       <br>
