--- a/views/transportHomePage.html
+++ b/views/transportHomePage.html
@@ -5,17 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jobFinder</title>
     <link rel="icon" href="/assets/log/bird.png">
-    <!-- Core CSS - Include with every page -->
     <link href="/assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
-    <!-- <link href="/assets/font-awesome/css/font-awesome.css" rel="stylesheet" /> -->
     <link href="/assets/css/style.css" rel="stylesheet"/>
-    <!-- <link href="/assets/css/main-style.css" rel="stylesheet"/> -->
-     <!-- <link href="/assets/css/mystyle.css" rel="stylesheet"/> -->
     <link href="/assets/css/chat.css" rel="stylesheet"/>
-    <!-- <link href="/assets/css/modal.css"> -->
     <link href="/assets/css/autocomplete.css" rel="stylesheet"/>
-    <!-- <link rel="stylesheet" type="text/css" href="/bower_components/ng-img-crop/compile/minified/ng-img-crop.css"> -->
-     <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet"> -->
      <link rel="stylesheet" href="assets/css/SearchStyle.css">
      <style media="screen">
        .languageHeadLines{
@@ -27,9 +20,7 @@
          font-size:20px;
        }
      </style>
-  </head>
-  <body ng-controller="transportCtrl">
-        <header>
+     <header ng-controller="transportCtrl">
           <div class="container">
              <div>
                  <div class="head">
@@ -49,6 +40,13 @@
              </div>
           </div>
         </header>
+  </head>
+  <body ng-controller="transportCtrl">
+        <div>
+          <span translate="travelPageIntro" style="color:white;font-size: 24px;margin-left: 50px;background-color: rgb(206, 66, 244)">Where do you need to go? 
+            This page is all about travellers and means of transports ready for your journey.
+          </span>
+        </div>
        <div class="col-lg-2" style="background-color:rgb(234, 217, 204);">
         <br>
          <div style="background-color:rgb(244, 149, 65);">
