--- a/public/assets/css/SearchStyle.css
+++ b/public/assets/css/SearchStyle.css
@@ -14,7 +14,8 @@ body {
     background-image: url("/assets/img/background2.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
+    height: 100%;
 
 }
 
