--- a/views/contactus.html
+++ b/views/contactus.html
@@ -14,50 +14,56 @@
          <div class="container">
             <div class="title">
                 <div class="head" id="two">
-                      <h1>your help lab</h1>
+                      <h1>yourhelplab.com is all about work opportunites</h1>
                 </div>
             </div>
          </div>
         </header>
- <span><p class="pull-left searchesLogin"><span><a href="" ng-click="changeLanguage('TG')">ትግርኛ</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="" ng-click="changeLanguage('EN')">English</a></span>&nbsp;&nbsp;<span><a href="" ng-click="changeLanguage('NL')">Dutch</a></span></p>
-<section id="contact" style="background-color:grey;">
-      <div class="section-content">
-        <h1 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s" translate="getInTouchWithUs">Get in touch with us</span></h1>
-      </div>
+
+ <div class="container">
+   <div class="row">
+    <br>
+     <div class="col-lg-6">
+       <section id="contact" style="background-color:rgb(186, 176, 152);">
+         <span><p class="pull-left searchesLogin"><span><a href="" ng-click="changeLanguage('TG')">ትግርኛ</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="" ng-click="changeLanguage('EN')">English</a></span>&nbsp;&nbsp;<span><a href="" ng-click="changeLanguage('NL')">Dutch</a></span></p><br>
+          <div class="section-content">
+            <h1 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s" translate="getInTouchWithUs">Get in touch with us</span></h1>
+          </div>
       <div class="contact-section">
-      <div class="container">
-        <form>
-          <div class="col-md-6 form-line">
+          <div class="form-line">
               <div class="form-group">
                 <label for="exampleInputUsername" translate="name">Your name</label>
                 <input type="text" ng-model="name" class="form-control" id="" placeholder=" Enter Name">
               </div>
               <div class="form-group">
                 <label for="exampleInputEmail" translate="email">Email Address</label>
-                <input type="email" ng-model="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id">
+                <input type="email" ng-model="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id" required>
               </div>
               <div class="form-group">
                 <label for="telephone" translate="telephone">Mobile No.</label>
-                <input type="tel" ng-model="tele" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no.">
+                <input type="tel" ng-model="tele" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no." required="true">
               </div>
             </div>
-            <div class="col-md-6">
               <div class="form-group">
                 <label for ="description" translate="messages"> Message</label>
                 <textarea  class="form-control" id="description" ng-model="message" placeholder="Enter Your Message"></textarea>
-              </div>
-              <div>
+             
+              <div><br>
 
-                <button type="button" ng-click="send()" translate="send" class="btn btn-default submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
+                <button type="button" ng-click="send()" translate="send" class="btn btn-primary" ><i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
               </div><br><br><br><br>
               <p ng-model="errorMessage" style="color:red">{{errorMessage}}</p>
               <p ng-mode="sendSuccess" style="color:green">{{sendSuccess}}</p>
           </div>
-        </form>
+       
 
       </div>
     </section>
-    <a href="/login.html" translate="gotologinpage">Go to Login page</a>&nbsp;&nbsp;&nbsp;&nbsp;
+     </div>
+
+   </div>
+   
+ </div>
     <a href="/searches.html" translate="gotohomepage">Go to Home page</a>
  </body>
     <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
