--- a/views/newsFromHome.html
+++ b/views/newsFromHome.html
@@ -20,10 +20,8 @@
               font-size:20px;
             }
       </style>
-   </head>
-  <body ng-controller="newscontroller">
-    <header>
-      <div class="container">
+      <header ng-controller="newscontroller">
+        <div class="container">
          <div>
              <div class="head">
                   <div class="col-lg-1 pull-left">
@@ -31,7 +29,7 @@
                   </div>
                   <div class="col-lg-11">
                     <h1 translate="yourhelplabdotcom"> your help lab</h1>
-                    <p  class="pull-left"><a href="" class="headerText" ng-click="changeLanguage('TG')">ትግርኛ</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="headerText" ng-click="changeLanguage('EN')" style="color:white;font-size:16px">English</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="headerText" ng-click="changeLanguage('NL')" >Dutch</a></p>
+                    <p  class="pull-left"><i class="fa fa-language" aria-hidden="true"></i><a href="" class="headerText" ng-click="changeLanguage('TG')">ትግርኛ</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-language" aria-hidden="true"></i><a class="headerText" ng-click="changeLanguage('EN')" style="color:white;font-size:16px">English</a>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-language" aria-hidden="true"></i><a class="headerText" ng-click="changeLanguage('NL')" >Dutch</a></p>
                     <p class="pull-right searchesLogin "><a href="/searches.html" class="headerText" translate="backtosearchHomepage">Home</a></p></span>
                     <p class="pull-right searchesLogin "><a href="/contactus.html" class="headerText" ng-click="contactus()" translate="contactus">Contact Us</a></p></span>
                     <p class="pull-right searchesLogin"><a href="/about.html" class="headerText" ng-click="about()" translate="aboutus">About</a></p></span>
@@ -41,8 +39,15 @@
              <div >
           </div>
          </div>
-      </div>
-     </header>
+        </div>
+      </header>
+   </head>
+  <body ng-controller="newscontroller">
+   <div>
+      <span translate="newsPageIntro" style="color:white;font-size: 24px;margin-left: 50px;background-color: rgb(206, 66, 244);">
+        Source of News,telling stories and discussion amoung people for a better solution.
+      </span>
+   </div>
     <div class="row">
         <div class="col-lg-12">
             <!-- Form Elements -->
