--- a/views/searches.html
+++ b/views/searches.html
@@ -5,7 +5,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116004031-1"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yourHelpLab,The work opportunities</title>
+    <title>your help  lab home page,The work opportunities</title>
     <link rel="stylesheet" type="text/css" href="/bower_components/ng-img-crop/compile/minified/ng-img-crop.css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -40,21 +40,19 @@
             }
 
       </style>
-   </head>
-  <body ng-controller="logincontroller">
-    <header>
+      <header ng-controller="logincontroller">
       <div class="container">
          <div>
              <div class="head">
                   <div class="col-lg-1 pull-left">
-                    <img src="/assets/img/bird.png" alt="log here" width="110" height="110">
+                    <img src="/assets/img/bird.png" alt="log here"  width="110" height="110">
                   </div>
                   <div class="col-lg-11">
                     <h1 translate="yourhelplabdotcom"> your help lab</h1>
-                    <p  class="pull-left"><a href="" class="headerText" ng-click="changeLanguage('TG')">ትግርኛ</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="headerText" ng-click="changeLanguage('EN')" style="color:white;font-size:16px">English</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="headerText" ng-click="changeLanguage('NL')" >Dutch</a></p>
-                    <p class="pull-right searchesLogin "><a href="/contactus.html" class="headerText" ng-click="contactus()" translate="contactus">Contact Us</a></p></span>
-                    <p class="pull-right searchesLogin"><a href="/about.html" class="headerText" ng-click="about()" translate="aboutus">About</a></p></span>
-                    <p class="pull-right searchesLogin"><a href="/login.html" ng-click="onClickLoginFromHomePage()" class="headerText" translate="loginHeadline">Login</a></p><br>
+                    <p  class="pull-left"><i class="fa fa-language" aria-hidden="true"></i><a href="" class="headerText" ng-click="changeLanguage('TG')">ትግርኛ</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-language" aria-hidden="true"></i><a class="headerText" ng-click="changeLanguage('EN')" style="color:white;font-size:16px">English</a>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-language" aria-hidden="true"></i><a class="headerText" ng-click="changeLanguage('NL')" >Dutch</a></p>
+                    <p class="pull-right searchesLogin "><i class="fa fa-home" aria-hidden="true"></i><a href="/contactus.html" class="headerText" ng-click="contactus()" translate="contactus">Contact Us</a></p></span>
+                    <p class="pull-right searchesLogin"><i class="fa fa-check" aria-hidden="true"></i><a href="/about.html" class="headerText" ng-click="about()" translate="aboutus">About</a></p></span>
+                    <p class="glyphicon glyphicon-user pull-right searchesLogin"><a href="/login.html" ng-click="onClickLoginFromHomePage()" class="headerText" translate="loginHeadline">Login</a></p><br>
                   </div>
              </div>
              <div >
@@ -62,6 +60,11 @@
          </div>
       </div>
      </header>
+   </head>
+  <body ng-controller="logincontroller">
+    <div style="font-family:'Rokkitt', serif;font-size:18px;color:white;margin-left: 30px;">
+      <span id="text" translate="homePageInfo"  ></span>
+    </div>
     <div class="row backgroundColor">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <!-- Form Elements -->
@@ -83,12 +86,9 @@
                       <br>
                       <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                         <div class="" ng-hide="HomePageContent">
-                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <strong id="text" translate="homePageInfo" style="font-family:'Rokkitt', serif;font-size:18px;color:white;" ></strong>
-                            <div class="col-lg-12 col-md-6 col-sm-12 col-xs-12">
-                              <img src="/assets/img/work.jpg" alt="">
+                            <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
+                               <img src="/assets/img/work.jpg" alt="work city" class="img-fluid">
                             </div>
-                          </div>
                         </div>
                         <div>
                           <br>
